--- a/index.html
+++ b/index.html
@@ -8,9 +8,33 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
     <title>Frontend Mentor | Blog preview card</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   
   <body>
+    <main>
+      <img src="assets/images/illustration-article.svg" alt="" id="miniatura">
 
+      <div id="learningInfo">
+        Learning
+      </div>
+      <h4>Published 21 Dec 2023</h2>
+
+      <h1>HTML & CSS foundations</h1>
+
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+      <table>
+        <tr>
+          <td>
+            <img id="userFoto" src="assets/images/image-avatar.webp" alt="Greg Hooper">
+          </td>
+          <td id="userName">Greg Hooper</td>
+        </tr>
+      </table>
+    </main>
   </body>
 </html>
